# PlatformManifest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/hooks/: pre_tool_use.sh  stop.sh
.console/: backlog.md  log.md  task.md
.context/: config.yaml  routes.yaml
.context/.engine/: campaign.py  cold.py  consolidate.py  distill.py  prune.py  route.py
.context/knowledge/: README.md  projection-redaction-ordering.md  schemas-additive-only.md
.context/templates/: investigation_capsule.template.yaml  loop_checkpoint.template.yaml  worker_handoff.template.yaml
.custodian/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: capability-refs.yml  ci.yml  custodian-audit.yml
.hooks/: pre-push
docs/: README.md  context-layout.md  forking-guide.md
docs/architecture/: capability-plane-completion-spec.md  cognition-memory-overview.md  (+18 more)
examples/: README.md
schemas/: platform_manifest.schema.json
scripts/: bootstrap-boundary-secrets.sh  clone-repos.sh  provision-machine.sh  provision.sh
tests/: test_architecture_docs.py  test_capabilities.py  test_cold_store.py  test_composition.py  test_consolidate.py  test_context_router.py  test_custodian_policy.py  test_effective_cli.py  test_includes.py  test_ontology_relationships.py  test_platform_manifest_detectors.py  test_private_manifest.py  test_project_public_cli.py  test_projection.py  test_repo_graph.py  test_repograph_bridge.py  test_validate.py  test_visibility_scope.py  test_work_scope.py
(+59 files in other folders)
