[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-manifest"
version = "0.6.0"
description = "Canonical platform repo map: identity, legacy aliases, and edges between repos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "packaging>=23.0",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
platform-manifest = "platform_manifest.cli:app"

[tool.setuptools.package-data]
platform_manifest = ["data/*.yaml", "schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
